tdf#148146 Selecting an Impress template results in failed assert

regression from
    commit 31e7845339b30a69f06a04619660398fe4267268
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Thu Feb 17 12:19:49 2022 +0200
    use more SfxItemSet::CloneAsValue

Change-Id: Ie56fe208b64d464bf24c480db69c03cbe438a032
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/131979
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>